# OpenSmartHome

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/osh_node/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/osh_node/include/: osh_node.h  osh_node.inc  osh_node_ble.h  osh_node_comm.h  osh_node_errors.h  osh_node_events.h  osh_node_fsm.h  osh_node_fsm.inc  osh_node_network.h  osh_node_network.inc  osh_node_now.h  osh_node_ota.h  osh_node_proto.h  osh_node_proto.inc  osh_node_proto_dataframe.h  osh_node_status.h  osh_node_wifi.h
components/osh_node/src/: osh_node.c  osh_node_fsm.c  osh_node_now.c  osh_node_ota.c  osh_node_proto.c  osh_node_status.c  osh_node_wifi.c
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: node_state.py  pyproject.toml
